Added index and links between pages

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,7 @@
 <h2><%= @article.title %></h2>
 <p><%= @article.text %></p>
+
+<p>
+  <%= link_to 'Back',articles_path %> | 
+  <%= link_to 'Home',welcome_index_path %>
+</p>
