--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,6 +13,7 @@
     <td><%= article.title %></td>
     <td><%= truncate(article.text, length: 60)  %></td>
     <td><%= link_to 'View',article_path(article)%></td>
+    <td><%= link_to 'Edit',edit_article_path(article)%></td>
   </tr>
   <%end%>
 </table>
