--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,7 @@
 <p><%= @article.text %></p>
 
 <p>
-  <%= link_to 'Back',articles_path %> | 
-  <%= link_to 'Home',welcome_index_path %>
+  <%= link_to 'Back',articles_path %> |
+  <%= link_to 'Home',welcome_index_path %> |
+  <%= link_to 'Edit',edit_article_path%>
 </p>
