--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,7 +14,11 @@
     <td><%= truncate(article.text, length: 60)  %></td>
     <td><%= link_to 'View',article_path(article)%></td>
     <td><%= link_to 'Edit',edit_article_path(article)%></td>
+    <td><%= link_to 'Delete',article_path(article),method: :Delete, data: {confirm: 'Are you sure?'}%></td>
   </tr>
   <%end%>
 </table>
-<p><%= link_to 'Home',welcome_index_path %></p>
+<p>
+  <%= link_to 'Home',welcome_index_path %> | 
+  <%= link_to 'New',new_article_path%>
+</p>
