--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,5 +4,6 @@
 <p>
   <%= link_to 'Back',articles_path %> |
   <%= link_to 'Home',welcome_index_path %> |
-  <%= link_to 'Edit',edit_article_path%>
+  <%= link_to 'Edit',edit_article_path%> |
+  <%= link_to 'Delete',@article,method: :Delete, data: {confirm: 'Are you sure?'}%>
 </p>
