--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,34 @@
 <h2><%= @article.title %></h2>
 <p><%= @article.text %></p>
 
+<hr>
+<h3>Comments</h3>
+<% @article.comments.each do |comment| %>
+  <p><strong>Commenter:</strong></p>
+  <%= comment.commenter %>
+  <p><strong>Comment:</strong></p>
+  <%= comment.body%>
+  <p><%= link_to 'Delete',[comment.article, comment],method: :Delete, data: {confirm: 'Are you sure?'}%></p>
+<% end %>
+<hr>
+
+
+<h3>Leave a comment:</h3>
+<%= form_for([@article, @article.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %> <br>
+    <%= f.text_field :commenter %>
+  </p>
+  </p>
+    <%= f.label :body %> <br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+
+
 <p>
   <%= link_to 'Back',articles_path %> |
   <%= link_to 'Home',welcome_index_path %> |
