--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,14 +1,28 @@
 <h1>Create a New Article!</h1>
+
 <%= form_for :article, url: articles_path do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+
+<!-- Checking for Errors -->
+<% if @article.errors.any? %>
+  <div id="Error_explanation">
+  <h2><%= pluralize(@article.errors.count, "error")%> prohibited this article from being saved: </h2>
+  <p><ul><% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %> </li>
+  <% end %>
+</ul></p>
+</div>
+<% end %>
+
+
+<p>
+  <%= f.label :title %><br>
+  <%= f.text_field :title %>
+</p>
+<p>
+  <%= f.label :text %><br>
+  <%= f.text_area :text %>
+</p>
+<p>
+  <%= f.submit %>
+</p>
 <% end %>
