--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,45 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
  */
+
+@import "bootstrap";
+
+
+*{
+  border: 2px red dashed;
+}
+
+
+body{
+  background-color: #3A3A3A;
+}
+
+.container{
+  background-color: #78777F;
+  padding-top:15px;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+}
+
+.table tr,
+.table tr td,
+.table tr th{
+  border:black 2px solid;
+}
+
+.table{
+  background-color: #F5F5F5;
+  a{
+    color: blue;
+  }
+}
+
+th{
+  background-color: #AAAAAA;
+}
+
+a{
+  color: #DDDDBB;
+}
