--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,34 @@
-<h1> Article list </h1>
-<table>
-  <tr>
-    <th>Id</th>
-    <th>Date</th>
-    <th>Title</th>
-    <th>Text</th>
-  </tr>
-  <% @articles.each do |article| %>
-  <tr>
-    <td><%= article.id %></td>
-    <td><%= article.created_at %></td>
-    <td><%= article.title %></td>
-    <td><%= truncate(article.text, length: 60)  %></td>
-    <td><%= link_to 'View',article_path(article)%></td>
-    <td><%= link_to 'Edit',edit_article_path(article)%></td>
-    <td><%= link_to 'Delete',article_path(article),method: :Delete, data: {confirm: 'Are you sure?'}%></td>
-  </tr>
-  <%end%>
-</table>
-<p>
-  <%= link_to 'Home',welcome_index_path %> | 
-  <%= link_to 'New',new_article_path%>
-</p>
+
+<div class = "row">
+  <div class="col"></div>
+  <div class = "col-md-10">
+    <h1> Article list </h1>
+    <table class = "table">
+      <tr>
+        <th>Id</th>
+        <th>Date</th>
+        <th>Title</th>
+        <th>Text</th>
+        <th></th>
+      </tr>
+      <% @articles.each do |article| %>
+      <tr>
+        <td><%= article.id %></td>
+        <td><%= article.created_at %></td>
+        <td><%= article.title %></td>
+        <td><%= truncate(article.text, length: 60)  %></td>
+        <td>
+          <%= link_to 'View',article_path(article)%>
+          <%= link_to 'Edit',edit_article_path(article)%>
+          <%= link_to 'Delete',article_path(article),method: :Delete, data: {confirm: 'Are you sure?'}%>
+        </td>
+      </tr>
+      <%end%>
+    </table>
+    <p>
+      <%= link_to 'Home',welcome_index_path %> |
+      <%= link_to 'New',new_article_path%>
+    </p>
+  </div>
+  <div class="col"></div>
+</div>
