--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome to my Blog</h1>
-<p><%= link_to 'My Blog', articles_path%></p>
+<div class = "row">
+  <div class = "col"></div>
+  <div id="title_logo" class = "col-md-9 text-center">
+    <h1>Welcome to my Blog</h1>
+    <p><%= link_to 'Articles', articles_path%></p>
+  </div>
+  <div class="col"></div>
+</div>
