--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,31 +3,29 @@
   <div class="col"></div>
   <div class = "col-md-10">
     <h1> Article list </h1>
-    <table class = "table">
+    <p><%= link_to 'Create new article',new_article_path, class: 'btn btn-lg btn-info'%></p>
+    <table class = "table table-hover">
       <tr>
         <th>Id</th>
         <th>Date</th>
         <th>Title</th>
         <th>Text</th>
-        <th></th>
+        <th colspan="3"></th>
       </tr>
       <% @articles.each do |article| %>
       <tr>
         <td><%= article.id %></td>
         <td><%= article.created_at %></td>
-        <td><%= article.title %></td>
+        <td><h3><%= article.title %></h3></td>
         <td><%= truncate(article.text, length: 60)  %></td>
-        <td>
-          <%= link_to 'View',article_path(article)%>
-          <%= link_to 'Edit',edit_article_path(article)%>
-          <%= link_to 'Delete',article_path(article),method: :Delete, data: {confirm: 'Are you sure?'}%>
-        </td>
+        <td><%= link_to 'View',article_path(article), class: 'btn btn-sm btn-info' %></td>
+        <td><%= link_to 'Edit',edit_article_path(article), class: 'btn btn-sm btn-warning' %></td>
+        <td><%= link_to 'Delete',article_path(article),method: :Delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-sm btn-danger' %></td>
       </tr>
       <%end%>
     </table>
     <p>
-      <%= link_to 'Home',welcome_index_path %> |
-      <%= link_to 'New',new_article_path%>
+      <%= link_to 'Home',welcome_index_path, class: 'btn btn-lg btn-info' %>
     </p>
   </div>
   <div class="col"></div>
