--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -13,15 +13,17 @@
 </div>
 <% end %>
 
-
+<div class = "field", style="width:100%">
 <p>
   <%= f.label :title %><br>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, class:'form-control' %>
 </p>
 <p>
   <%= f.label :text %><br>
-  <%= f.text_area :text %>
+  <%= f.text_area :text,class:'form-control' %>
 </p>
+</div>
+
 <p>
   <%= f.submit %>
 </p>
