--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,10 +3,10 @@
 <p><%= @article.text %></p>
 
 <p>
-  <%= link_to 'Back',articles_path %> |
-  <%= link_to 'Home',welcome_index_path %> |
-  <%= link_to 'Edit',edit_article_path%> | 
-  <%= link_to 'Delete',@article,method: :Delete, data: {confirm: 'Are you sure?'}%>
+  <%= link_to 'Back',articles_path, class:'btn btn-md btn-info' %> |
+  <%= link_to 'Home',welcome_index_path, class:'btn btn-md btn-info' %> |
+  <%= link_to 'Edit',edit_article_path, class:'btn btn-md btn-warning'%> |
+  <%= link_to 'Delete',@article,method: :Delete, data: {confirm: 'Are you sure?'} class:'btn btn-md btn-danger'%>
 </p>
 
 <hr>
