--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -14,11 +14,14 @@
     <%= f.label :commenter %> <br>
     <%= f.text_field :commenter %>
   </p>
+  <div class = "field", style="width:100%">
   </p>
     <%= f.label :body %> <br>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class:'form-control' %>
   </p>
+  </div>
   <p>
-    <%= f.submit %>
+    <%= f.submit class:'btn btn-md btn-success' %> |
+    <%= link_to 'Back',article_path(@article), class:'btn btn-md btn-info' %>
   </p>
 <% end %>
