--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,42 +11,5 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_self
+ *= require main
  */
-
-@import "bootstrap";
-
-/*
-*{
-  border: 2px red dashed;
-}
-*/
-
-body{
-  background-color: #3A3A3A;
-}
-
-.container{
-  background-color: #78777F;
-  padding-top:15px;
-  border-left: 2px solid black;
-  border-right: 2px solid black;
-}
-
-.table tr,
-.table tr td,
-.table tr th{
-  border-top:black 2px solid;
-  border-bottom: black 2px solid;
-}
-
-.table{
-  background-color: #F5F5F5;
-}
-
-th{
-  background-color: #AAAAAA;
-}
-
-a{
-  color: #DDDDBB;
-}
