--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -9,11 +9,11 @@
     <%= f.text_area :text %>
   </p>
   <p>
-    <%= f.submit %>
+    <%= f.submit class:'btn btn-md btn-success' %>
   </p>
 <% end %>
 
 <p>
-  <%= link_to 'Back',articles_path %> |
-  <%= link_to 'Home',welcome_index_path %>
+  <%= link_to 'Back',articles_path, class:'btn btn-md btn-info' %> |
+  <%= link_to 'Home',welcome_index_path, class:'btn btn-md btn-info' %>
 </p>
