--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,12 @@
 
 <div class = "row">
-  <div class="col"></div>
-  <div class = "col-md-10">
+  <div class = "col">
     <h1> Article list </h1>
-    <p><%= link_to 'Create new article',new_article_path, class: 'btn btn-lg btn-info'%></p>
-    <table class = "table table-hover">
+    <p>
+      <%= link_to 'Home',welcome_index_path, class: 'btn btn-lg btn-info' %>
+      <%= link_to 'Create new article',new_article_path, class: 'btn btn-lg btn-success'%>
+    </p>
+    <table class = "table table-hover", style="Border:4px solid;">
       <tr>
         <th>Id</th>
         <th>Date</th>
@@ -14,7 +16,7 @@
       </tr>
       <% @articles.each do |article| %>
       <tr>
-        <td><%= article.id %></td>
+        <td style="font-size:32px;"><%= article.id  %></td>
         <td><%= article.created_at %></td>
         <td><h3><%= article.title %></h3></td>
         <td><%= truncate(article.text, length: 60)  %></td>
@@ -24,9 +26,5 @@
       </tr>
       <%end%>
     </table>
-    <p>
-      <%= link_to 'Home',welcome_index_path, class: 'btn btn-lg btn-info' %>
-    </p>
   </div>
-  <div class="col"></div>
 </div>
