--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,7 @@
 
 @import "bootstrap";
 @import "comments.scss";
+@import "welcome.scss";
 
 /*
 *{
@@ -8,8 +9,20 @@
 }
 */
 
+html, body{
+    height:calc(100%);
+}
 body{
-  background-color: #3A3A3A;
+  background-color: #8b9ea3;
+  min-height: 75rem;
+  padding-top: 3.5rem;
+}
+list-header{
+  border:4px solid;
+    background-color: #AAAAAA;
+    div{
+      float:left;
+    }
 }
 
 .container{
@@ -17,22 +30,55 @@ body{
   padding: 15px;
   border-left: 2px solid black;
   border-right: 2px solid black;
+  height:100%;
 }
 
-.table tr,
-.table tr td,
-.table tr th{
-  border-top:black 2px solid;
-  border-bottom: black 2px solid;
+article-list.col{
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
-.table{
+listed-article:hover{
+  background-color: #D5D5D5;
+}
+
+listed-article{
+  a{
+    color: #666666;
+  }
+
+  border-radius: 5px;
+  border:3px black solid;
   background-color: #F5F5F5;
+  padding:4px;
+  vertical-align: middle;
+  .btn{
+      margin:2px;
+  }
+  div.col-3{
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+  header{
+    vertical-align: middle;
+  }
+  article-date{
+    text-align: right;
+  }
+  ~listed-article.row{
+    border-top: 2px solid;
+    margin-top: 6px;
+  }
+  article-buttons {
+    padding: 3px;
+    float: left;
+    .btn{
+      float: left;
+      width: 64px;
+    }
+  }
 }
 
-th{
-  background-color: #AAAAAA;
-}
 
 a{
   color: #DDDDBB;
