--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.btn-welcome{
+  background-color: #354b9d;
+  border: #4b6699 2px solid;
+}
+
+.btn-welcome:hover{
+  background-color: #7182bd;
+  color: white;
+}
+
+a.nav-link{
+  color: #666666;
+  vertical-align: middle;
+}
