--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,19 +1,20 @@
 <h1>Edit article</h1>
 <%= form_for @article  do |f| %>
+
+<div class = "field", style="width:100%">
   <p>
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class:'form-control'  %>
   </p>
   <p>
     <%= f.label :text %><br>
-    <%= f.text_area :text %>
+    <%= f.text_area :text, class:'form-control'  %>
   </p>
   <p>
-    <%= f.submit class:'btn btn-md btn-success' %>
+    <%= f.submit class:'btn btn-md btn-success' %> |
+      <%= link_to 'Back',articles_path, class:'btn btn-md btn-info' %> |
+      <%= link_to 'Home',welcome_index_path, class:'btn btn-md btn-info' %>
+
   </p>
 <% end %>
-
-<p>
-  <%= link_to 'Back',articles_path, class:'btn btn-md btn-info' %> |
-  <%= link_to 'Home',welcome_index_path, class:'btn btn-md btn-info' %>
-</p>
+</div>
