--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,33 @@
-
-<div class = "row">
-  <div class = "col">
-    <h1> Article list </h1>
-    <p>
-      <%= link_to 'Home',welcome_index_path, class: 'btn btn-lg btn-info' %>
-      <%= link_to 'Create new article',new_article_path, class: 'btn btn-lg btn-success'%>
-    </p>
-    <table class = "table table-hover", style="Border:4px solid;">
-      <tr>
-        <th>Id</th>
-        <th>Date</th>
-        <th>Title</th>
-        <th>Text</th>
-        <th colspan="3"></th>
-      </tr>
-      <% @articles.each do |article| %>
-      <tr>
-        <td style="font-size:32px;"><%= article.id  %></td>
-        <td><%= article.created_at %></td>
-        <td><h3><%= article.title %></h3></td>
-        <td><%= truncate(article.text, length: 60)  %></td>
-        <td><%= link_to 'View',article_path(article), class: 'btn btn-sm btn-info' %></td>
-        <td><%= link_to 'Edit',edit_article_path(article), class: 'btn btn-sm btn-warning' %></td>
-        <td><%= link_to 'Delete',article_path(article),method: :Delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-sm btn-danger' %></td>
-      </tr>
-      <%end%>
-    </table>
+<div class = "col">
+  <div class = "row">
+    <div class = "col">
+      <h1> Article list </h1>
+      <p>
+        <%= link_to 'Home',welcome_index_path, class: 'btn btn-lg btn-info' %>
+        <%= link_to 'Create new article',new_article_path, class: 'btn btn-lg btn-success'%>
+      </p>
+    </div>
   </div>
-</div>
+
+<div class="row">
+    <article-list class="col">
+      <% @articles.each do |article| %>
+
+      <listed-article class="row">
+        <div class="col">
+          <header class="row">
+            <article-title class="col-md-10"><h3><%= link_to article.title,article_path(article)%></h3></article-title>
+            <article-date class="col-2"> <%= article.created_at.strftime('%Y/%m/%d') %></article-date>
+          </header>
+          <div class="row"><%= truncate(article.text, length: 60)  %></div>
+          <article-buttons class="row">
+            <div ><%= link_to 'View',article_path(article), class: 'btn btn-sm btn-info' %></div>
+            <div ><%= link_to 'Edit',edit_article_path(article), class: 'btn btn-sm btn-warning' %></div>
+            <div ><%= link_to 'Delete',article_path(article),method: :Delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-sm btn-danger' %></div>
+          </article-buttons>
+        </div>
+      </listed-article>
+      <%end%>
+    </article-list>
+    </div>
+    </div>
