--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
   </head>
 
   <body>
+    <%= render "shared/navbar"%>
     <div class = "container">
       <%= yield %>
     </div>
+        <%= render "shared/footer"%>
   </body>
 </html>
