--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,8 @@
 @import "bootstrap";
 @import "comments.scss";
 @import "welcome.scss";
+@import "navigation.scss";
+@import "fontawesome.css";
 
 /*
 *{
@@ -15,7 +17,7 @@ html, body{
 body{
   background-color: #8b9ea3;
   min-height: 75rem;
-  padding-top: 3.5rem;
+  padding-top: 2.5rem;
 }
 list-header{
   border:4px solid;
@@ -79,11 +81,6 @@ listed-article{
   }
 }
 
-
-a{
-  color: #DDDDBB;
-}
-
 section{
   padding-top: 5px;
   padding-bottom: 5px;
@@ -91,4 +88,8 @@ section{
 
 section~section{
   border-top: 2px solid;
+}
+
+.btn-light{
+
 }
