--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
     </ul>
     <form class="form-inline mt-2 mt-md-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <i class="fas fa-search" type="submit"></i>
+      <i class="fas fa-search"></i>
     </form>
   </div>
 </nav>
