--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="navbar navbar-expand-sm navbar-dark bg-dark">
+<footer class="navbar navbar-expand-sm navbar-dark bg-dark px-8 py-0">
   <a class="navbar-brand" href="#">Bottom navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,5 +23,9 @@
         </div>
       </li>
     </ul>
+  </div>
+  <div class="text-right">
+    <i class="fab fa-github-square fa-2x"></i>
+    <i class="fab fa-linkedin fa-2x"></i>
   </div>
 </footer>
