--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+article{
+    background-color: aliceblue;
+    border-radius: 2em;
+    h1,h2,h3,h4,p,a{
+        color: #0c0c0c;
+      }
+}
+
+article h2{
+    text-align: center;
+    font-size: 2em;
+}
+
+datetime{
+    font-size: 1.2rem;
+    text-emphasis: 2;
+}
