--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -1,14 +1,18 @@
 .navbar{
-    background-color: #050031 !important;
-    padding: 0px;
+    background-color: #191820 !important;
 }
 
 .nav-item{
     padding: 4px;
+    background-color: #191820
 }
 
 .nav-item a{
     font-weight: bold;
+}
+
+.nav-item:hover{
+    background-color: #3e3d47;
 }
 
 .nav-item a:hover{
@@ -24,12 +28,12 @@
   }
 
   .navbar{
-    .fas{
+    .fas, .fab{
         padding: 4px;
         color: #D5D5D5 !important;
     }
     
-    .fas:hover{
+    .fas:hover, .fab:hover{
         color: yellow !important;
         text-decoration: none;
     }
