--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,15 @@
 <section class="row">
-  <div class = "col">
-<h2><%= @article.title %></h2>
-<p> <%= @article.created_at.strftime('Created on: %Y/%m/%d at %H:%M%p') %> </p>
-<p><%= @article.text %></p>
-  <p>
-    <%= link_to 'Back',articles_path, class:'btn btn-md btn-info' %> |
-    <%= link_to 'Home',welcome_index_path, class:'btn btn-md btn-info' %> |
-    <%= link_to '', edit_article_path,  class:'fas fa-pen fa-2x'%> |
-    <%= link_to '',@article,method: :Delete, data: {confirm: 'Are you sure?'}, class:"fas fa-trash-alt fa-2x"%>
-  </p>
-  </div>
+  <article class = "col-sm">
+    <h2><%= @article.title %></h2>
+    <datetime> <%= @article.created_at.strftime('Created on: %Y/%m/%d at %H:%M%p') %> </datetime>
+    <p><%= @article.text %></p>
+      <p>
+        <%= link_to 'Back',articles_path, class:'btn btn-md btn-info' %> |
+        <%= link_to 'Home',welcome_index_path, class:'btn btn-md btn-info' %> |
+        <%= link_to '', edit_article_path,  class:'fas fa-pen fa-2x'%> |
+        <%= link_to '',@article,method: :Delete, data: {confirm: 'Are you sure?'}, class:"fas fa-trash-alt fa-2x"%>
+      </p>
+  </article>
 </section>
+
 <%= render 'comments/comment'%>
-<%= render 'comments/form' %>
