--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,22 +1,28 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark px-8 py-0">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <%= link_to 'Home', welcome_index_path,  class:'nav-link' %> <span class="sr-only">(current)</span>
+      <li class="nav-item">
+        <%= link_to 'Home', welcome_index_path,  class:'nav-link' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'Articles', articles_path,  class:'nav-link' %>
+        <%= link_to 'Portfolio', nil,  class:'nav-link disabled' %>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <%= link_to 'Articles', articles_path,  class:'nav-link ' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Games', nil,  class:'nav-link disabled' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'About me', nil,  class:'nav-link disabled' %>
       </li>
     </ul>
     <form class="form-inline mt-2 mt-md-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <i class="fas fa-search"></i>
+      <i class="fas fa-search fa-2x"></i>
     </form>
   </div>
 </nav>
