--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class = "row">
   <div class = "col"></div>
   <div id="title_logo" class = "col-md-9 text-center">
-    <h1>Welcome to my Blog</h1></br>
+    <h1>Welcome to my website</h1></br>
     <p><%= link_to 'Articles', articles_path, class: 'btn btn-lg btn-welcome'%></p>
   </div>
   <div class="col"></div>
